crates/lang/macro/tests/ui/trait_def/fail/invalid_namespace_4.stderr
error: expected a string literal for `namespace` ink! trait definition configuration argument
 --> $DIR/invalid_namespace_4.rs:3:25
  |
3 | #[ink::trait_definition(namespace = true)]
  |                         ^^^^^^^^^^^^^^^^
